Fix Overflow-y (from contento to main)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,6 @@ header{
 .content{
     width: 100%; 
     height: calc(100vh - 11.5rem);
-    overflow-y: scroll;
 }
 
 table{
